--- a/osu-cleaner/TcNo-osu-cleaner.csproj
+++ b/osu-cleaner/TcNo-osu-cleaner.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryInfoExtensions.cs" />
+    <Compile Include="FileInfoExtensions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,8 +80,11 @@
     <Compile Include="items.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="JunctionPoint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolicLink.cs" />
+    <Compile Include="SymbolicLinkReparseData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,9 +124,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\pixel.png" />
     <None Include="img\osu-cleaner-logo.256.png" />
     <None Include="img\osu-cleaner-logo.256_click.png" />
     <None Include="img\osu-cleaner-logo.256_hover.png" />
+    <Content Include="Additional Licenses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="osu_cleaner_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
