--- a/osu-cleaner/TcNo-osu-cleaner.csproj
+++ b/osu-cleaner/TcNo-osu-cleaner.csproj
@@ -28,6 +28,16 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
+  <PropertyGroup> 
+
+<GenerateResourceMSBuildArchitecture>CurrentArchitecture</GenerateResourceMSBuildArchitecture>
+<GenerateResourceMSBuildRuntime>CurrentRuntime</GenerateResourceMSBuildRuntime>
+    
+</PropertyGroup>
+<PropertyGroup>
+  <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+</PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
@@ -52,7 +62,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DarkUI">
-      <HintPath>..\..\DarkUI\DarkUI\bin\Release\DarkUI.dll</HintPath>
+      <HintPath>..\DarkUI\DarkUI\bin\Release\DarkUI.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -67,6 +77,11 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
+  <ItemGroup>
+  <Reference Include="System.Resources.Extensions">
+    <HintPath>$(ProgramFiles)\dotnet\sdk\8.0.303\System.Resources.Extensions.dll</HintPath>
+  </Reference>
+</ItemGroup>
   <ItemGroup>
     <Compile Include="DirectoryInfoExtensions.cs" />
     <Compile Include="FileInfoExtensions.cs" />
