--- a/osu-cleaner/TcNo-osu-cleaner.csproj
+++ b/osu-cleaner/TcNo-osu-cleaner.csproj
@@ -166,6 +166,9 @@
     <Content Include="osu_cleaner_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>call "$(ProjectDir)\PostBuild.bat"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
