--- a/osu-cleaner/TcNo-osu-cleaner.csproj
+++ b/osu-cleaner/TcNo-osu-cleaner.csproj
@@ -69,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Resources.Extensions">
-      <HintPath>.\System.Resources.Extension\System.Resources.Extensions.dll</HintPath>
+      <HintPath>.\Resources\System.Resources.Extension\System.Resources.Extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
